[gd_scene load_steps=6 format=2]

[ext_resource path="res://weapons/Bullet-player.png" type="Texture" id=1]
[ext_resource path="res://weapons/Bullet.gd" type="Script" id=2]
[ext_resource path="res://weapons/Bullet-enemy.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "player",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "enemy",
"speed": 5.0
} ]

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.19209e-07, -9.53674e-07 )
frames = SubResource( 2 )
animation = "enemy"

[node name="LifeTimer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
